--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -4672,8 +4672,8 @@ It seems that your quick thinking has saved you on this occassion, but what will
 		<Translation>Taktik Studium</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EVENTSTORY_STUDY_RHETORIC_ARCHETYPES_TITLE</zType>
-		<Translation>Redekunst Studium</Translation>
+		<zType>TEXT_EVENTSTORY_STUDY_POLITICS_ARCHETYPES_TITLE</zType>
+		<Translation>Politik Studium</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_STUDY_COMMERCE_ARCHETYPES_TITLE</zType>
