--- a/Translations/German/text-trait-change.xml
+++ b/Translations/German/text-trait-change.xml
@@ -619,8 +619,8 @@
 		<Translation>Schüler der Philosophie</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_TRAIT_STUDY_RHETORIC</zType>
-		<Translation>Schüler der Redekunst</Translation>
+		<zType>TEXT_TRAIT_STUDY_POLITICS</zType>
+		<Translation>Schüler der Politik</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_TRAIT_STUDY_TACTICS</zType>
