--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -736,7 +736,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_RENAME_CHARACTER</zType>
-		<Translation>Umbenennen {0}</Translation>
+		<Translation>{0} Umbenennen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_PLAYER_EMAIL_NOTIFICATIONS</zType>
