latest main version changes
- translated newly changed things
- (potential new stuff will get added later when i have more time
- fixed typos

--- a/Translations/German/text-effectUnit-change.xml
+++ b/Translations/German/text-effectUnit-change.xml
@@ -91,8 +91,8 @@
 		<Translation>Belagerer Oberhaupt</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_EFFECTUNIT_GARRISON</zType>
-		<Translation>Besatzung</Translation>
+		<zType>TEXT_EFFECTUNIT_WARDEN</zType>
+		<Translation>Aufseher</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTUNIT_TOUGH</zType>
