--- a/Translations/German/text-eventStory-change.xml
+++ b/Translations/German/text-eventStory-change.xml
@@ -4268,7 +4268,7 @@ Was sollen wir erwiedern?</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_PLAYER_PEACE_BUILDING_TRUST</zType>
-		<Translation>Eine Bote von {PLAYER-0,0} ist eingetroffen. "Eure Tanten haben uns eure guten Absichten gezeigt. Lasst uns unser Vertrauen weiter ausbauen. Wir sollten einem gegenseitigen Frieden zustimmen."
+		<Translation>Eine Bote von {PLAYER-0,0} ist eingetroffen. "Eure Taten haben uns eure guten Absichten gezeigt. Lasst uns unser Vertrauen weiter ausbauen. Wir sollten einem gegenseitigen Frieden zustimmen."
 
 Was sollen wir erwiedern?</Translation>
 	</Entry>
@@ -13858,7 +13858,7 @@ Will you take the sword?</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_MYSTERIOUS_SWORD_USING</zType>
-		<Translation><![CDATA[Was sollen wir mit deinem mysteriösen Schwert anstellen? Es ist auf jeden Fall eine seltes Kostbarkeit.]]></Translation>
+		<Translation><![CDATA[Was sollen wir mit deinem mysteriösen Schwert anstellen? Es ist auf jeden Fall eine seltene Kostbarkeit.]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_MYSTERIOUS_SWORD_PILGRIMS</zType>
