--- a/Translations/German/text-promotion-change.xml
+++ b/Translations/German/text-promotion-change.xml
@@ -78,8 +78,8 @@
 		<Translation>Belagerer</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_PROMOTION_GARRISON</zType>
-		<Translation>Besatzung</Translation>
+		<zType>TEXT_PROMOTION_WARDEN</zType>
+		<Translation>Aufseher</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROMOTION_TOUGH</zType>
