--- a/Translations/German/text-eventOption-change.xml
+++ b/Translations/German/text-eventOption-change.xml
@@ -35,7 +35,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_PLAYER_WAR_TRIBUTE_YES</zType>
-		<Translation>Wir werden deine Forschung unterstützen...</Translation>
+		<Translation>Wir werden eure Forschung unterstützen...</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTOPTION_PLAYER_WAR_NO</zType>
